add nef data collector and data listener signals class