@@ -4,7 +4,11 @@ import java.time.OffsetDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 
+import io.nwdaf.eventsubscription.model.NwdafEvent;
+import io.nwdaf.eventsubscription.nwdaf_sub_collector.kafka.datacollection.DataListenerSignals;
+import io.nwdaf.eventsubscription.nwdaf_sub_collector.kafka.datacollection.dummy.KafkaDummyDataListener;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
@@ -23,16 +27,9 @@ import io.nwdaf.eventsubscription.requestbuilders.PrometheusRequestBuilder;
 
 @Component
 public class KafkaDataCollectionListener {
-    public static Integer no_dataCollectionEventListeners = 0;
-    public static final Object dataCollectionLock = new Object();
-    public static Boolean startedSendingData = false;
-    public static final Object startedSendingDataLock = new Object();
-    private static final Logger logger = LoggerFactory.getLogger(KafkaDataCollectionListener.class);
-    public static final Object availableOffsetLock = new Object();
-    public static List<NwdafEventEnum> supportedEvents = new ArrayList<>(List.of(NwdafEventEnum.NF_LOAD));
-    public static List<NwdafEventEnum> activeEvents = new ArrayList<>();
-    public static final Object activeEventsLock = new Object();
-    public static List<OffsetDateTime> startedCollectingTimes = new ArrayList<>();
+    public static DataListenerSignals dataListenerSignals = new DataListenerSignals(
+            Arrays.asList(NwdafEvent.NwdafEventEnum.NF_LOAD),
+            LoggerFactory.getLogger(KafkaDataCollectionListener.class));
 
     @Value(value = "${nnwdaf-eventsubscription.prometheus_url}")
     String prometheusUrl;
@@ -40,64 +37,78 @@ public class KafkaDataCollectionListener {
     final KafkaProducer producer;
 
     final ObjectMapper objectMapper;
+    private static final Logger logger = LoggerFactory.getLogger(KafkaDataCollectionListener.class);
 
     public KafkaDataCollectionListener(KafkaProducer producer, ObjectMapper objectMapper) {
         this.producer = producer;
         this.objectMapper = objectMapper;
-        while (startedCollectingTimes.size() < supportedEvents.size()) {
-            startedCollectingTimes.add(null);
-            activeEvents.add(null);
+        for (NwdafEventEnum eType : dataListenerSignals.getSupportedEvents()) {
+            dataListenerSignals.getEventProducerStartedSending().put(eType, false);
+            dataListenerSignals.getEventProducerIsActive().put(eType, false);
+            dataListenerSignals.getEventStartedCollectingTimes().put(eType, OffsetDateTime.MIN);
+            dataListenerSignals.getEventProducerCounters().put(eType, 0L);
         }
     }
 
     @Async
     @EventListener(id = "data")
     public void onApplicationEvent(final KafkaDataCollectionEvent event) {
-        if (!start()) {
+
+        if (!dataListenerSignals.getSupportedEvents().containsAll(event.getMessage())) {
+
+            System.out.println("Data Producer doesn't support one of the following events: " + event.getMessage() +
+                    " , Supported Events: " + dataListenerSignals.getSupportedEvents() +
+                    " , Active events:" + dataListenerSignals.getEventProducerStartedSending().entrySet().stream().filter(Map.Entry::getValue).map(Map.Entry::getKey).toList());
+            return;
+        }
+        for (NwdafEventEnum e : event.getMessage()) {
+            dataListenerSignals.activate(e);
+        }
+        if (!dataListenerSignals.start()) {
             return;
         }
         System.out.println("Started sending data for events: " + event.getMessage()
-                + " , Supported Events: " + supportedEvents + " , Active events:" + activeEvents);
+                + " , Supported Events: " + dataListenerSignals.getSupportedEvents()
+                + " , Active events:" + dataListenerSignals.getEventProducerStartedSending().entrySet().stream().filter(Map.Entry::getValue).map(Map.Entry::getKey).toList());
 
-        while (no_dataCollectionEventListeners > 0) {
+        PrometheusRequestBuilder prometheusRequestBuilder = new PrometheusRequestBuilder();
+
+        while (dataListenerSignals.getNoDataListener().get() > 0) {
 
             long start, prom_delay, diff, wait_time;
             start = System.nanoTime();
             prom_delay = 0L;
-            for (NwdafEventEnum eType : supportedEvents) {
+            for (NwdafEventEnum eType : dataListenerSignals.getSupportedEvents()) {
                 switch (eType) {
                     case NF_LOAD:
-                        if (!synchronizedIsEventInsideActiveList(NwdafEventEnum.NF_LOAD)) {
+                        if (!dataListenerSignals.getEventProducerIsActive().get(eType)) {
                             break;
                         }
                         List<NfLoadLevelInformation> nfloadinfos;
                         try {
                             long t = System.nanoTime();
-                            nfloadinfos = new PrometheusRequestBuilder().execute(eType, prometheusUrl);
+                            nfloadinfos = prometheusRequestBuilder.execute(eType, prometheusUrl);
                             prom_delay += (System.nanoTime() - t) / 1000000L;
                         } catch (JsonProcessingException e) {
                             logger.error("Failed to collect data for event: " + eType, e);
-                            stop();
+                            dataListenerSignals.stop();
                             continue;
                         }
                         if (nfloadinfos == null || nfloadinfos.isEmpty()) {
                             logger.error("Failed to collect data for event: " + eType);
-                            stop();
+                            dataListenerSignals.stop();
                             continue;
                         } else {
                             for (int j = 0; j < nfloadinfos.size(); j++) {
                                 try {
-                                    // System.out.println("nfloadinfo"+j+": "+nfloadinfos.get(j));
                                     producer.sendMessage(objectMapper.writeValueAsString(nfloadinfos.get(j)), eType.toString());
                                     if (j == 0) {
                                         logger.info("collector sent nfload with time:" + nfloadinfos.get(j).getTimeStamp());
                                     }
-                                    if (!startedSendingData) {
-                                        startSending(activeEvents.indexOf(eType));
-                                    }
+                                    dataListenerSignals.startSending(eType);
                                 } catch (Exception e) {
                                     logger.error("Failed to send nfloadlevelinfo to kafka", e);
-                                    stop();
+                                    dataListenerSignals.stop();
                                     continue;
                                 }
                             }
@@ -114,7 +125,7 @@ public class KafkaDataCollectionListener {
                     Thread.sleep(wait_time - diff);
                 } catch (InterruptedException e) {
                     logger.error("Failed to wait for timeout", e);
-                    stop();
+                    dataListenerSignals.stop();
                     continue;
                 }
             }
@@ -122,60 +133,5 @@ public class KafkaDataCollectionListener {
             logger.info("data coll total delay = " + diff + "ms");
         }
         logger.info("Prometheus Data Collection stopped!");
-    }
-
-    public static boolean start() {
-        synchronized (dataCollectionLock) {
-            if (no_dataCollectionEventListeners < 1) {
-                no_dataCollectionEventListeners++;
-                logger.info("producing dummy data to send to kafka...");
-                return true;
-            }
-        }
-        return false;
-    }
-
-    private static void stop() {
-        synchronized (dataCollectionLock) {
-            if (no_dataCollectionEventListeners > 0) {
-                no_dataCollectionEventListeners--;
-            }
-        }
-        synchronized (startedSendingDataLock) {
-            startedSendingData = false;
-        }
-        synchronized (availableOffsetLock) {
-            for (int i = 0; i < supportedEvents.size(); i++) {
-                startedCollectingTimes.set(i, null);
-            }
-        }
-    }
-
-    public static void startSending(int i) {
-        synchronized (startedSendingDataLock) {
-            startedSendingData = true;
-        }
-        synchronized (availableOffsetLock) {
-            startedCollectingTimes.set(i, OffsetDateTime.now());
-        }
-    }
-
-    public static void stopSending(int i) {
-        synchronized (startedSendingDataLock) {
-            startedSendingData = false;
-        }
-        synchronized (availableOffsetLock) {
-            startedCollectingTimes.set(i, null);
-            activeEvents.set(i, null);
-        }
-    }
-
-    public static boolean synchronizedIsEventInsideActiveList(NwdafEventEnum event) {
-        synchronized (activeEventsLock) {
-            if (activeEvents.contains(event)) {
-                return true;
-            }
-        }
-        return false;
     }
 }
